website fix taskSelectOutput overflow issue

--- a/Website/style.css
+++ b/Website/style.css
@@ -454,6 +454,8 @@ blur-background {
     flex-wrap: wrap;
     justify-content: start;
     align-content: start;
+    max-height: 70vh;
+    overflow-y: scroll;
 }
 
 #publicationViewerPopup{
